--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<H1><center>This is AWS Server Created by Yogendra!!!!  :)<br><br><br>
+<H1><center>This is AWS Server Created by Yogendra Chauhan!!!!  :)<br><br><br>
 <img src="image_46.png" alt="Italian Trulli">
