--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <title>Web Server</title>
-<H1><center>This AWS Server is Created by Yogendra Chauhan!!!!!!!!  :)<br><br><br>
+<H1><center>This AWS Server is Created by Yogendra Chauhan! :)<br><br><br>
 <img src="image_46.png" alt="Italian Trulli">
